# vscode-m65-debug-adapter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  package.json
3rd/: CMakeLists.txt
3rd/cppdap/: CMakeLists.txt
3rd/cppdap/src/: session.cpp
cmake/: conan_setup.cmake
src/: CMakeLists.txt  c64_debugger_data.cpp  c64_debugger_data.h  connection.h  dap_logger.cpp  dap_logger.h  duration.h  exception.h  logger.cpp  logger.h  m65_dap_session.cpp  m65_dap_session.h  m65_debugger.cpp  m65_debugger.h  main.cpp  memory_cache.cpp  memory_cache.h  opcodes.cpp  opcodes.h  pch.h  serial_connection.cpp  serial_connection.h  unix_connection.cpp  unix_connection.h  unix_domain_socket_connection.cpp  unix_domain_socket_connection.h  unix_serial_connection.cpp  unix_serial_connection.h  util.cpp  util.h
src/package/: package.json
src/test/: CMakeLists.txt  compare_hw_and_mock_main.cpp  compare_with_hw.cpp  connection_proxy.cpp  connection_proxy.h  connection_test.cpp  expressions_test.cpp  m65_debugger_test.cpp  memory_test.cpp  mock_mega65.cpp  mock_mega65.h  mock_mega65_fixture.h  mock_xemu_fixture.h  opcode_test.cpp  test_common.cpp  test_common.h  trace_test.cpp  util_test.cpp
src/test/data/: .gitignore  ByteDump.txt  test.dbg  test.dbg.in  test.prg  test_main.asm  test_main.sym  test_main.vs
